syntax = "proto3";

package axion.auth;

import "common/common.proto";

// Validate Session Request
message ValidateSessionRequest {
  string session_token = 1;
  axion.common.RequestMetadata metadata = 2;
}

// Validate Session Response
message ValidateSessionResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    SessionData session = 3;
  }
}

// Session data returned from validation
message SessionData {
  string user_id = 1;
  string session_id = 2;
  int64 expires_at = 3;
  string ip_address = 4;
  string user_agent = 5;
  UserData user = 6;
}

// User data from session
message UserData {
  string id = 1;
  string email = 2;
  string name = 3;
  bool email_verified = 4;
  string image = 5;
}
