syntax = "proto3";

package axion.auth.v1;

import "auth/session.proto";

service AuthService {
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc RevokeSession(RevokeSessionRequest) returns (RevokeSessionResponse);
}

