syntax = "proto3";

package axion.common.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

// Метаданные запроса (обязательны для всех Request)
message RequestMetadata {
  string request_id = 1 [(buf.validate.field).string.uuid = true];
  string user_id = 2 [(buf.validate.field).string.uuid = true];
  string session_id = 3;
  google.protobuf.Timestamp timestamp = 4 [(buf.validate.field).required = true];
  map<string, string> headers = 5;
}

// Пагинация
message Pagination {
  int32 page = 1 [(buf.validate.field).int32.gte = 1];
  int32 limit = 2 [
    (buf.validate.field).int32.gte = 1,
    (buf.validate.field).int32.lte = 100
  ];
  int32 total = 3;
}

// Empty ответ
message Empty {}

